[gd_scene load_steps=4 format=3 uid="uid://bnxvcgy3n31mx"]

[ext_resource type="Script" path="res://Anxiety Effects/Self Talk/self_talk_minigame.gd" id="1_xscct"]
[ext_resource type="PackedScene" uid="uid://deba3okt5gkhs" path="res://Chapters/Chapter 5/Conversations/ch_5_4_convo.tscn" id="2_51bdh"]
[ext_resource type="PackedScene" uid="uid://ds8c1rlw6rdhm" path="res://UI/Scenes/game_tutorial_self_talk.tscn" id="2_x8kuk"]

[node name="SelfTalkMinigame" type="Node2D"]
script = ExtResource("1_xscct")
num_to_win = 30
has_following_conversation = true
following_conversation = ExtResource("2_51bdh")

[node name="TheBGs" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.784314)
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 1424.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.784314)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-576, -324)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(0, 0, 0, 648, 1152, 648, 1152, 0, 1088, 64, 1088, 584, 64, 584, 64, 64, 1088, 64, 1152, 0)

[node name="GameTutorial" parent="." instance=ExtResource("2_x8kuk")]
z_index = 1
position = Vector2(-576, -324)

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="finished_tutorial" from="GameTutorial" to="." method="_on_game_tutorial_finished_tutorial"]
